--- a/index1.html
+++ b/index1.html
@@ -18,6 +18,8 @@
   </head>
 
   <body>
+    <!--hola-->>
+    <!-- Este es un comentario en HTML. -->
     <nav
       class="navbar navbar-expand-lg fixed-top"
       style="background-color: #7f1734"
